# bazel-rust-systemc

./: .bazelrc  BUILD.bazel  README.md  README_RTL_INTEGRATION.md  WORKSPACE.bazel
docs/: 01-bazel-comprehensive-guide.md  02-rust-embedded-guide.md  03-systemc-guide.md  04-build-architecture.md  05-troubleshooting-guide.md  06-quick-reference.md  README.md
firmware/: BUILD.bazel  Cargo.toml
firmware/src/: main.rs  peripheral.rs  protocol.rs
qemu/: BUILD.bazel  machine_config.c  run_qemu.sh
rtl/memory/: BUILD.bazel
rust/toolchain/: BUILD.bazel  memory.x
systemc/: BUILD.bazel  peripheral_model.cpp  peripheral_model.h  testbench.cpp
tools/: build.sh  debug.sh  simulate.sh
tools/rtl/: BUILD.bazel  requirements.txt  rtl_rules.bzl
tools/rtl/templates/: cell_array.v.jinja2
