# Root build file
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

# Feature flags
bool_flag(
    name = "enable_logs",
    build_setting_default = False,
)

bool_flag(
    name = "enable_debug",
    build_setting_default = False,
)

# Platform constraints
constraint_setting(name = "mcu")

constraint_value(
    name = "cortex_m4",
    constraint_setting = ":mcu",
)

constraint_value(
    name = "riscv32",
    constraint_setting = ":mcu",
)